--- a/미니구현/탁구게임/app.css
+++ b/미니구현/탁구게임/app.css
@@ -68,10 +68,22 @@ img {
     font-weight: 700;
 }
 
+/* 드랍다운 목록 스타일추가 */
+.scoreChoice span {
+    padding-top: 3px;
+}
 
 .dropdown {
     margin-left: 7px;
     margin-bottom: 10;
+}
+
+/* ------------------ */
+
+#winValue {
+    border-radius: 10px;
+    padding: 2px 5px;
+
 }
 
 .btn {
