--- a/yeldCamp/views/campgrounds/new.ejs
+++ b/yeldCamp/views/campgrounds/new.ejs
@@ -3,7 +3,13 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST" novalidate class="validated-form">
+    <form
+      action="/campgrounds"
+      method="POST"
+      novalidate
+      class="validated-form"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -28,7 +34,8 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
+        <input type="file" name="campground[image]" id="image" multiple />
+        <!-- <label class="form-label" for="image">Image Url</label>
         <input
           class="form-control"
           type="text"
@@ -36,7 +43,7 @@
           name="campground[image]"
           required
         />
-        <div class="valid-feedback">Looks good!</div>
+        <div class="valid-feedback">Looks good!</div> -->
       </div>
 
       <div class="mb-3">
