--- a/yeldCamp/views/campgrounds/edit.ejs
+++ b/yeldCamp/views/campgrounds/edit.ejs
@@ -8,6 +8,7 @@
       method="POST"
       novalidate
       class="validated-form"
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -35,15 +36,9 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          id="image"
-          name="campground[image]"
-          value="<%=campground.image%>"
-          required
-        />
+        <label class="form-label" for="image">Add Image</label>
+        <input type="file" name="campground[image]" id="image" multiple />
+
         <div class="valid-feedback">Looks good!</div>
       </div>
 
