--- a/yeldCamp/views/campgrounds/edit.ejs
+++ b/yeldCamp/views/campgrounds/edit.ejs
@@ -35,12 +35,12 @@
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label class="form-label" for="image">Add Image</label>
         <input type="file" name="campground[image]" id="image" multiple />
 
         <div class="valid-feedback">Looks good!</div>
-      </div>
+      </div> -->
 
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
@@ -73,11 +73,40 @@
         >
         <div class="valid-feedback">Looks good!</div>
       </div>
+
+      <label for="">Add More Images</label>
+      <div class="input-group custom-file mb-3">
+        <input
+          type="file"
+          class="form-control"
+          id="image"
+          name="campground[image]"
+          multiple
+        />
+        <label class="input-group-text" for="image">Upload</label>
+
+        <!-- custom-file-label 넣으면 선택한 파일명이 뜨는데..  -->
+      </div>
+      <div class="mb-3">
+        <% campground.images.forEach(function(img, i) { %>
+
+        <img src="<%=img.thumbnail %>" class="img-thumbnail" alt="" />
+        <div class="form-check-inline">
+          <input
+            type="checkbox"
+            id="image-<%=i%>"
+            name="deleteImages[]"
+            value="<%=img.filename%>"
+          />
+        </div>
+        <label for="image-<%=i%>">Delete?</label>
+        <% })%>
+      </div>
+
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
       </div>
     </form>
-
     <a href="/campgrounds/<%= campground._id %>">Back To Campground</a>
     <a href="/campgrounds">All Campgrounds</a>
   </div>
