--- a/yeldCamp/views/campgrounds/new.ejs
+++ b/yeldCamp/views/campgrounds/new.ejs
@@ -33,9 +33,10 @@
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
-      <div class="mb-3">
-        <input type="file" name="campground[image]" id="image" multiple />
-        <!-- <label class="form-label" for="image">Image Url</label>
+
+      <!-- <input type="file" name="campground[image]" id="image" multiple /> -->
+      <!-- ------ -->
+      <!-- <label class="form-label" for="image">Image Url</label>
         <input
           class="form-control"
           type="text"
@@ -44,7 +45,6 @@
           required
         />
         <div class="valid-feedback">Looks good!</div> -->
-      </div>
 
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
@@ -74,6 +74,23 @@
         ></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
+
+      <div class="mb-3">
+        <label for="">Upload Images</label>
+        <div class="input-group custom-file mb-3">
+          <input
+            type="file"
+            class="form-control"
+            id="image"
+            name="campground[image]"
+            multiple
+          />
+          <label class="input-group-text" for="image">Upload</label>
+
+          <!-- custom-file-label 넣으면 선택한 파일명이 뜨는데..  -->
+        </div>
+      </div>
+
       <div class="mb-3">
         <button class="btn btn-success">Add Campground</button>
       </div>
