--- a/yeldCamp/views/layouts/boilerplate.ejs
+++ b/yeldCamp/views/layouts/boilerplate.ejs
@@ -34,6 +34,7 @@
       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
 
     <script src="/javascripts/validateForm.js"></script>
   </body>
