--- a/yeldCamp/views/campgrounds/show.ejs
+++ b/yeldCamp/views/campgrounds/show.ejs
@@ -3,6 +3,7 @@
 
 <div class="row">
   <div class="col-6">
+    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="campgroundCarousel" class="carousel slide">
       <div class="carousel-inner">
         <% campground.images.forEach((img,i) => { %>
@@ -179,3 +180,9 @@
     <% } %>
   </div>
 </div>
+
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>"; // ejs로는 외부 js,css 안됨. 미리뽑아놓기
+  const campground = <%- JSON.stringify(campground) %>
+</script>
+<script src="/javascripts/showPageMap.js"></script>
