--- a/yeldCamp/views/campgrounds/index.ejs
+++ b/yeldCamp/views/campgrounds/index.ejs
@@ -1,27 +1,42 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>All Campgrounds</h1>
-<div><a href="/campgrounds/new">Add Campground</a></div>
+<div id="cluster-map" style="width: 100%; height: 500px"></div>
+<div class="container">
+  <h1>All Campgrounds</h1>
+  <!-- <div><a href="/campgrounds/new">Add Campground</a></div> -->
 
-<% for(let campground of campgrounds) {%>
-<div class="card mb-3">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%=campground.description%></p>
-        <p class="card-text">
-          <small class="text-body-secondary"><%=campground.location%></small>
-        </p>
+  <% for(let campground of campgrounds) {%>
+  <div class="card mb-3">
+    <div class="row">
+      <div class="col-md-4">
+        <% if(campground.images.length) {%>
+        <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
+        <% } else {%>
+        <img class="img-fluid" alt="" src="" />
+        <!-- todo 디폴트 이미지 넣기 -->
+        <% } %>
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%= campground.title %></h5>
+          <p class="card-text"><%=campground.description%></p>
+          <p class="card-text">
+            <small class="text-body-secondary"><%=campground.location%></small>
+          </p>
 
-        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
-          ><%= campground.title %></a
-        >
+          <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
+            ><%= campground.title %></a
+          >
+        </div>
       </div>
     </div>
   </div>
+  <% } %>
 </div>
-<% } %>
+
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const campgrounds =  { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
