--- a/yeldCamp/views/campgrounds/edit.ejs
+++ b/yeldCamp/views/campgrounds/edit.ejs
@@ -1,8 +1,7 @@
-<% layout('layouts/boilerplate') %>
-
+<% layout('layouts/boilerplate')%>
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
-  <div class="col-6 offset-3">
+  <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds/<%=campground._id%>?_method=PUT"
       method="POST"
@@ -17,10 +16,9 @@
           type="text"
           id="title"
           name="campground[title]"
-          value="<%=campground.title%>"
+          value="<%=campground.title %>"
           required
         />
-        <!-- 서버로 갈때 name이 그룹화될 수 있음 -->
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
@@ -30,34 +28,29 @@
           type="text"
           id="location"
           name="campground[location]"
-          value="<%=campground.location%>"
+          value="<%=campground.location %>"
           required
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
-      <!-- <div class="mb-3">
-        <label class="form-label" for="image">Add Image</label>
-        <input type="file" name="campground[image]" id="image" multiple />
-
-        <div class="valid-feedback">Looks good!</div>
-      </div> -->
 
       <div class="mb-3">
-        <label class="form-label" for="price">Price</label>
-        <div class="input-group flex-nowrap">
+        <label class="form-label" for="price">Campground Price</label>
+        <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
           <input
             type="text"
             class="form-control"
+            id="price"
             placeholder="0.00"
-            aria-label="price-label"
-            aria-describedby=""
+            aria-label="price"
+            aria-describedby="price-label"
             name="campground[price]"
-            value="<%=campground.price%>"
+            value="<%=campground.price %>"
             required
-          />
+          />\
+          <div class="valid-feedback">Looks good!</div>
         </div>
-        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
@@ -69,23 +62,26 @@
           name="campground[description]"
           required
         >
-<%=campground.description%></textarea
+<%= campground.description%></textarea
         >
         <div class="valid-feedback">Looks good!</div>
       </div>
-
-      <label for="">Add More Images</label>
-      <div class="input-group custom-file mb-3">
-        <input
-          type="file"
-          class="form-control"
-          id="image"
-          name="campground[image]"
-          multiple
-        />
-        <label class="input-group-text" for="image">Upload</label>
-
-        <!-- custom-file-label 넣으면 선택한 파일명이 뜨는데..  -->
+      <div class="mb-3">
+        <div class="form-file custom-file">
+          <input
+            type="file"
+            class="form-file-input"
+            id="image"
+            name="image"
+            multiple
+          />
+          <label class="form-file-label" for="image">
+            <span class="form-file-text custom-file-label"
+              >Add more image(s)...</span
+            >
+            <span class="form-file-button">Browse</span>
+          </label>
+        </div>
       </div>
       <div class="mb-3">
         <% campground.images.forEach(function(img, i) { %>
@@ -102,12 +98,10 @@
         <label for="image-<%=i%>">Delete?</label>
         <% })%>
       </div>
-
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
       </div>
     </form>
-    <a href="/campgrounds/<%= campground._id %>">Back To Campground</a>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
   </div>
 </div>
