--- a/yeldCamp/views/campgrounds/index.ejs
+++ b/yeldCamp/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div id="cluster-map" style="width: 100%; height: 500px"></div>
+<div id="cluster-map"></div>
 <div class="container">
   <h1>All Campgrounds</h1>
   <!-- <div><a href="/campgrounds/new">Add Campground</a></div> -->
