--- a/yeldCamp/views/campgrounds/new.ejs
+++ b/yeldCamp/views/campgrounds/new.ejs
@@ -1,8 +1,7 @@
-<% layout('layouts/boilerplate') %>
-
+<% layout('layouts/boilerplate')%>
 <div class="row">
   <h1 class="text-center">New Campground</h1>
-  <div class="col-6 offset-3">
+  <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds"
       method="POST"
@@ -19,8 +18,7 @@
           name="campground[title]"
           required
         />
-        <div class="valid-feedback"></div>
-        <!-- 서버로 갈때 name이 그룹화될 수 있음 -->
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -34,28 +32,24 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
 
-      <!-- <input type="file" name="campground[image]" id="image" multiple /> -->
-      <!-- ------ -->
-      <!-- <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          id="image"
-          name="campground[image]"
-          required
-        />
-        <div class="valid-feedback">Looks good!</div> -->
-
+      <!-- <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div> -->
       <div class="mb-3">
-        <label class="form-label" for="price">Price</label>
-        <div class="input-group flex-nowrap">
+        <label class="form-label" for="price">Campground Price</label>
+        <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
           <input
             type="text"
             class="form-control"
+            id="price"
             placeholder="0.00"
-            aria-label="price-label"
-            aria-describedby=""
+            aria-label="price"
+            aria-describedby="price-label"
             name="campground[price]"
             required
           />
@@ -74,8 +68,34 @@
         ></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
-
       <div class="mb-3">
+        <div class="form-file custom-file">
+          <input
+            type="file"
+            class="form-file-input"
+            id="image"
+            name="image"
+            multiple
+          />
+          <label class="form-file-label" for="image">
+            <span class="form-file-text custom-file-label"
+              >Choose image(s)...</span
+            >
+            <span class="form-file-button">Browse</span>
+          </label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <button class="btn btn-success">Add Campground</button>
+      </div>
+    </form>
+    <a href="/campgrounds">All Campgrounds</a>
+  </div>
+</div>
+
+<!-- 서버로 갈때 name이 그룹화될 수 있음 -->
+
+<!-- <div class="mb-3">
         <label for="">Upload Images</label>
         <div class="input-group custom-file mb-3">
           <input
@@ -85,17 +105,6 @@
             name="campground[image]"
             multiple
           />
-          <label class="input-group-text" for="image">Upload</label>
+          <label class="input-group-text" for="image">Upload</label> -->
 
-          <!-- custom-file-label 넣으면 선택한 파일명이 뜨는데..  -->
-        </div>
-      </div>
-
-      <div class="mb-3">
-        <button class="btn btn-success">Add Campground</button>
-      </div>
-    </form>
-
-    <a href="/campgrounds">All Campgrounds</a>
-  </div>
-</div>
+<!-- custom-file-label 넣으면 선택한 파일명이 뜨는데..  -->
