--- a/yeldCamp/views/campgrounds/show.ejs
+++ b/yeldCamp/views/campgrounds/show.ejs
@@ -1,62 +1,54 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
-
 <div class="row">
   <div class="col-6">
-    <div id="map" style="width: 400px; height: 300px"></div>
-    <div id="campgroundCarousel" class="carousel slide">
+    <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <% campground.images.forEach((img,i) => { %>
-        <div class="carousel-item active <%= i === 0 ? 'active' : '' %>">
-          <img src="<%= img.url %>" class="d-block w-100" alt="" />
+        <% campground.images.forEach((img, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+          <img src="<%= img.url%>" class="d-block w-100" alt="" />
         </div>
         <% }) %>
       </div>
-      <% if(campground.images.length > 1) { %>
-      <button
+      <% if(campground.images.length > 1) {%>
+      <a
         class="carousel-control-prev"
-        type="button"
-        data-bs-target="#campgroundCarousel"
-        data-bs-slide="prev"
+        href="#campgroundCarousel"
+        role="button"
+        data-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
         class="carousel-control-next"
-        type="button"
-        data-bs-target="#campgroundCarousel"
-        data-bs-slide="next"
+        href="#campgroundCarousel"
+        role="button"
+        data-slide="next"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+        <span class="sr-only">Next</span>
+      </a>
       <% } %>
     </div>
 
-    <div class="card mb-5">
+    <div class="card mb-3">
       <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %></p>
+        <h5 class="card-title"><%= campground.title%></h5>
+        <p class="card-text"><%= campground.description%></p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item text-body-secondary">
-          <%= campground.location %>
-        </li>
+        <li class="list-group-item text-muted"><%= campground.location%></li>
         <li class="list-group-item">
-          Submitted by <%= campground.author.username %>
+          Submitted by <%= campground.author.username%>
         </li>
-        <li class="list-group-item text-body-secondary">
-          $<%= campground.price %>/night
-        </li>
+        <li class="list-group-item">$<%= campground.price%>/night</li>
       </ul>
-
-      <% if(currentUser && campground.author.equals(currentUser._id)) { %>
-      <!-- campground.author.equals(currentUser._id) : 아무도 로그인 하지 않으면 코드가 중단되기때문에 currentUser && 넣어줌 -->
+      <% if( currentUser && campground.author.equals(currentUser._id)) {%>
       <div class="card-body">
         <a
-          href="/campgrounds/<%=campground._id%>/edit"
           class="card-link btn btn-info"
+          href="/campgrounds/<%=campground._id%>/edit"
           >Edit</a
         >
         <form
@@ -68,82 +60,45 @@
         </form>
       </div>
       <% } %>
-
-      <div class="card-footer text-body-secondary">
-        2 days ago <a href="/campgrounds" class="card-link">All Campgrounds</a>
-      </div>
+      <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
   <div class="col-6">
+    <div id="map"></div>
+
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
     <form
-      class="mb-3 validated-form"
       action="/campgrounds/<%=campground._id%>/reviews"
       method="POST"
+      class="mb-3 validated-form"
       novalidate
     >
       <!-- <div class="mb-3">
-        <label class="form-label" for="rating"> Rating </label>
-      <input
-          class="form-range"
-          type="range"
-          min="1"
-          max="5"
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div> -->
+      <fieldset class="starability-basic">
+        <input
+          type="radio"
+          id="no-rate"
+          class="input-no-rate"
           name="review[rating]"
-          id="rating"
-        />  </div>-->
-      <div class="mb-3">
-        <fieldset class="starability-basic">
-          <!-- <legend>First rating:</legend> -->
-          <input
-            type="radio"
-            id="no-rate"
-            class="input-no-rate"
-            name="review[rating]"
-            value="1"
-            checked
-            aria-label="No rating."
-          />
-          <!--+ 별점에는 따로 유효성검사를 하지 않음 -> 넣기 까다로움, 값에 1 넣어서 별점을 안주면 1이 입력되도록했음 
-                (유효성검사 넣는법.. js에서 별점이 없는경우가 정의되지 않고 별을 선택하지 않으면 폼을 제출하지 않도록 설정, 체크박스나 라디오 버튼을 선택했는지 확인하려면 문서객체모델을 조작해야함 . 이렇게 작업하지 않을거면 폼을제출하도록 허용하지 말기)-->
-          <input
-            type="radio"
-            id="first-rate1"
-            name="review[rating]"
-            value="1"
-          />
-          <label for="first-rate1" title="Terrible">1 star</label>
-          <input
-            type="radio"
-            id="first-rate2"
-            name="review[rating]"
-            value="2"
-          />
-          <label for="first-rate2" title="Not good">2 stars</label>
-          <input
-            type="radio"
-            id="first-rate3"
-            name="review[rating]"
-            value="3"
-          />
-          <label for="first-rate3" title="Average">3 stars</label>
-          <input
-            type="radio"
-            id="first-rate4"
-            name="review[rating]"
-            value="4"
-          />
-          <label for="first-rate4" title="Very good">4 stars</label>
-          <input
-            type="radio"
-            id="first-rate5"
-            name="review[rating]"
-            value="5"
-          />
-          <label for="first-rate5" title="Amazing">5 stars</label>
-        </fieldset>
-      </div>
+          value="1"
+          checked
+          aria-label="No rating."
+        />
+        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+        <label for="first-rate1" title="Terrible">1 star</label>
+        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+        <label for="first-rate2" title="Not good">2 stars</label>
+        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+        <label for="first-rate3" title="Average">3 stars</label>
+        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+        <label for="first-rate4" title="Very good">4 stars</label>
+        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+        <label for="first-rate5" title="Amazing">5 stars</label>
+      </fieldset>
       <div class="mb-3">
         <label class="form-label" for="body">Review Text</label>
         <textarea
@@ -158,16 +113,16 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% } %> <% for(let review of campground.reviews) {%>
+    <% } %> <% for(let review of campground.reviews) { %>
     <div class="card mb-3">
       <div class="card-body">
-        <h5 class="card-title"><%= review.author.username %></h5>
-        <p class="starability-result" data-rating="<%= review.rating%>">
-          Rated: <%= review.rating%>stars
+        <h5 class="card-title"><%= review.author.username%></h5>
+        <p class="starability-result" data-rating="<%=review.rating%>">
+          Rated: <%= review.rating %> stars
         </p>
-        <!-- <h6 class="card-subtitle mb-2">By <%= review.author.username %></h6> -->
-        <p class="card-text"><%= review.body%></p>
-        <% if(currentUser && review.author.equals(currentUser._id)) { %>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username%></h6> -->
+        <p class="card-text">Review: <%= review.body %></p>
+        <% if( currentUser && review.author.equals(currentUser._id)) {%>
         <form
           action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
@@ -182,7 +137,8 @@
 </div>
 
 <script>
-  const mapToken = "<%-process.env.MAPBOX_TOKEN%>"; // ejs로는 외부 js,css 안됨. 미리뽑아놓기
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
   const campground = <%- JSON.stringify(campground) %>
 </script>
+
 <script src="/javascripts/showPageMap.js"></script>
