스타일링 2차

--- a/yeldCamp/views/home.ejs
+++ b/yeldCamp/views/home.ejs
@@ -32,7 +32,7 @@
       </header>
       <main class="px-3">
         <h1>YelpCamp</h1>
-        <p class="lead">
+        <p class="lead mt-4 mb-4">
           Welcome to YelpCamp! <br />
           Jump right in and explore our many campgrounds. <br />
           Feel free to share some of your own and comment on others!
@@ -45,7 +45,7 @@
       </main>
 
       <footer class="mt-auto text-white-50">
-        <p>&copy; 2020</p>
+        <p>&copy; 2024</p>
       </footer>
     </div>
 
