--- a/yeldCamp/views/users/login.ejs
+++ b/yeldCamp/views/users/login.ejs
@@ -5,12 +5,12 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card shadow">
         <img
-          src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+          src="https://res.cloudinary.com/dd1x5mwes/image/upload/v1709165158/YelpCamp/e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82_%C2%AA_e%CC%82_e%CC%82_e%CC%82_e%CC%82_%C2%AAe%CC%82_99_e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82__22_q835oq.jpg"
           alt=""
           class="card-img-top"
         />
         <div class="card-body">
-          <h5 class="card-title">Login</h5>
+          <!-- <h5 class="card-title">Login</h5> -->
           <form action="/login" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
               <label class="form-label" for="username">Username</label>
@@ -25,7 +25,7 @@
               <div class="valid-feedback">Looks good!</div>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-4">
               <label class="form-label" for="password">Password</label>
               <input
                 class="form-control"
@@ -36,7 +36,7 @@
               />
               <div class="valid-feedback">Looks good!</div>
             </div>
-            <button class="btn btn-success btn-block">Login</button>
+            <button class="btn btn-dark btn-block">Login</button>
           </form>
         </div>
       </div>
