--- a/yeldCamp/views/campgrounds/index.ejs
+++ b/yeldCamp/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate') %>
 
 <div id="cluster-map"></div>
-<div class="container">
-  <h1>All Campgrounds</h1>
+<div class="container mt-5">
+  <h1 class="text-center fw-light mb-3">All Campgrounds</h1>
   <!-- <div><a href="/campgrounds/new">Add Campground</a></div> -->
 
   <% for(let campground of campgrounds) {%>
