--- a/yeldCamp/views/layouts/boilerplate.ejs
+++ b/yeldCamp/views/layouts/boilerplate.ejs
@@ -27,13 +27,27 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/app.css" />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
-    <main class="container mt-5">
-      <%- include('../partials/flash') %> <%-body%>
-    </main>
+    <main class="container"><%- include('../partials/flash') %> <%-body%></main>
     <%- include('../partials/footer') %>
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
