--- a/yeldCamp/views/partials/navbar.ejs
+++ b/yeldCamp/views/partials/navbar.ejs
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/campgrounds">Campgrounds</a>
         <a class="nav-link" href="/campgrounds/new">New Campground</a>
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
       </div>
       <div class="navbar-nav ms-auto">
         <% if(!currentUser) {%>
