--- a/yeldCamp/views/users/register.ejs
+++ b/yeldCamp/views/users/register.ejs
@@ -4,12 +4,12 @@
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card shadow">
         <img
-          src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+          src="https://res.cloudinary.com/dd1x5mwes/image/upload/v1709165158/YelpCamp/e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82_%C2%AA_e%CC%82_e%CC%82_e%CC%82_e%CC%82_%C2%AAe%CC%82_99_e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82_e%CC%82__22_q835oq.jpg"
           alt=""
           class="card-img-top"
         />
         <div class="card-body">
-          <h5 class="card-title">Register</h5>
+          <!-- <h5 class="card-title">Register</h5> -->
           <form
             action="/register"
             method="POST"
@@ -39,7 +39,7 @@
               />
               <div class="valid-feedback">Looks good!</div>
             </div>
-            <div class="mb-3">
+            <div class="mb-4">
               <label class="form-label" for="password">Password</label>
               <input
                 class="form-control"
@@ -50,7 +50,7 @@
               />
               <div class="valid-feedback">Looks good!</div>
             </div>
-            <button class="btn btn-success btn-block">Register</button>
+            <button class="btn btn-dark btn-block">Register</button>
           </form>
         </div>
       </div>
